[package]
name = "nuklear-sample-extended"
version = "0.3.1"
authors = ["snuk182 <snuk188@gmail.com>"]

[dependencies]
nuklear-rust = {version = "~0.6"}
nuklear-backend-gfx = {version="~0.9", path="../nuklear-backend-gfx"}
gfx_device_gl = "~0.16"
gfx_window_glutin = "~0.30"
gfx = "~0.18"
glutin = "~0.20"
image = "~0.12"

[[bin]]
name = "t"
path = "src/main.rs"
